...
    <ErrorBoundary>
    <Stack
      screenOptions={tabRootStackScreenOptions(palette)}
    >
      <Stack.Screen
        name="index"
        options={{ title: "Chat" }}
      />
      <Stack.Screen
        name="thread/[messageId]"
        options={{ title: "Thread" }}
      />
      <Stack.Screen
...
